plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

sourceCompatibility = '1.11'
targetCompatibility = '1.11'

dependencies {
    implementation 'org.mongodb:mongodb-driver-sync:4.7.2'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:2.0.4'

    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    implementation 'ch.qos.logback:logback-classic:1.4.5'

    // https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
    implementation 'com.jayway.jsonpath:json-path:2.7.0'

//    TODO: move user tests to test package and remove implementation below
    implementation 'junit:junit:4.13.1'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
//    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
